--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
+    "connect-mongo": "^0.8.2",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
+    "express-session": "^1.12.1",
     "glob": "^5.0.3",
     "handlebars-intl": "^1.1.1",
     "method-override": "^2.3.0",
