--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "homepage": "https://github.com/greenitthe/final-project#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "mongoose": "^4.7.2",
     "pug": "^2.0.0-beta6",
-    "redis": "^2.6.3",
     "socket.io": "^1.7.1"
   }
 }
