--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "to-do-list",
+  "name": "Today's Notes",
   "version": "1.0.0",
-  "description": "I am going to create a To Do list where you can add items to a list. You will also be able to search for a to do item. You will",
+  "description": "Useful for creating a daily remainder",
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.14.1",
@@ -15,14 +15,4 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/calebwr/final-project.git"
-  },
-  "author": "Caleb Wright",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/calebwr/final-project/issues"
-  },
-  "homepage": "https://github.com/calebwr/final-project#readme"
-}
+  
